#pragma once

namespace smart_house {

enum class TemperatureUnit {
    CELSIUS,
    FAHRENHEIT,
    KELVIN
};

}
